  * Supporting Spanish made by Juan Jesus Ojeda Croissier <juanje.ojeda@gmail.com>. Bug URL is http://bugzilla.moblin.org/show_bug.cgi?id=186.
  * Updating Spanish localization made by Juan Jesus Ojeda Croissier <juanje.ojeda@gmail.com>. Bug URL is http://bugzilla.moblin.org/show_bug.cgi?id=186.

  [ Prajwal Mohan ]
  * Fixing KVM bug on intrepid 

 -- Prajwal Mohan <prajwal@linux.intel.com>  Fri, 09 Jan 2009 10:27:25 -0800

moblin-image-creator (0.47) gaston; urgency=low

  [ Mitsutaka Amano ]
  * Starting new version.

  [ Prajwal Mohan ]
  * Adding Matchbox Desktop fset

  [ Mitsutaka Amano ]
  * Added the Create Install CD.
  * Added NFS Live USB Image function.
  * Added NFS Live CD Image function.
  * Added error handling and modified destination of isolinux.bin LiveIsoImage.
  * Rebase with nfsboot function. Fixed some comments and install_kernels() arguments.
  * Deleted necessary function in NFSLiveIsoImage. Adjusted NFSLiveUsbImage size.
  * Fixed moblin 1.0 apt repository URL. 

 -- Mitsutaka Amano <mamano@miraclelinux.com>  Wed, 05 Nov 2008 10:09:36 +0900

moblin-image-creator (0.46) gaston; urgency=low

  [ Mitsutaka Amano ]
  * Starting new version.

  [ Bob Spencer ]
  * A stand-alone python executable script that writes an image to a USB drive.
  * Intended to be used with a QuickStart "Test Drive Moblin" online guide.
  * Merge branch 'master' of ssh://bspencer@moblin.org/home/repos/tools/moblin-i

  [ Prajwal Mohan ]
  * Changing run level

  [ Mitsutaka Amano ]
  * Added short of changelog(for Prajwal and Bob).

  [ Prajwal Mohan ]
  * Changing init.1 script to accept init kernel param
  * Adding communication fset to netbook and menlow platforms
  * Adding post install scripts to menlow-lpia-moblin2
  * Adding bluez packages to fset
  * Added xfce4-session package to fset
  * Continue with project creation if rootstrap creation fails
  * Fixing path for Nand image initrd
  * Adding hal to communications fset